--- a/index.html
+++ b/index.html
@@ -6,8 +6,55 @@
     <title>slothui</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
- <h1>Hello</h1>   
+ <!-- header section start -->
+ <header class="container">
+    <!-- navbar section start -->
+     <nav>
+        <div class="nav-left">
+            <div>
+                <img src="/img/logo.png" alt="img" class="logo">
+            </div>
+            <div>
+                <img src="img/solothui.png" alt="img" class="solothui">
+            </div>
+            <!-- <h4 class="nav-title">slothui</h4> -->
+        </div>
+        <div class="nav-middle">
+            <ul id="menuItems">
+                <li><a href="">Features</a></li>
+                <li><a href="">Achievements</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">FAQ</a></li>
+                
+            </ul>
+        </div>
+        <div class="nav-right">
+            <div>
+                <button class="btnOne">Sign Up</button>
+            </div>
+            <div>
+                <button class="btnTwo">Log In</button>
+            </div>
+        </div>
+        <div class="menue-bar">
+            <i class="fa-solid fa-bars" onclick="handleMenu()"></i>
+        </div>
+     </nav>
+    <!-- navbar section end -->
+ </header>
+ <!-- header section end -->
+   
+ <!-- main section start -->
+ <main></main>
+ <!-- main section end -->
+
+ <!-- footer section start -->
+ <footer></footer>
+ <!-- footer section end -->
+    
+    <script src="js/script.js"></script>
 </body>
 </html>
